--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -25,14 +25,14 @@
   margin-left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-  -webkit-box-shadow: 0px 0px 10px 10px #ebebeb;
-          box-shadow: 0px 0px 10px 10px #ebebeb;
   border-radius: 20px;
   margin-top: 2vh;
   -webkit-transition: -webkit-box-shadow 0.2s linear;
   transition: -webkit-box-shadow 0.2s linear;
   transition: box-shadow 0.2s linear;
   transition: box-shadow 0.2s linear, -webkit-box-shadow 0.2s linear;
+  -webkit-box-shadow: 0px 0px 10px 10px #ebebeb;
+          box-shadow: 0px 0px 10px 10px #ebebeb;
 }
 
 .title {
@@ -71,5 +71,74 @@
   to {
     background-position: 200% center;
   }
+}
+
+.mainContentArea {
+  width: 80vw;
+  height: auto;
+  margin-left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  -webkit-box-shadow: 0px 0px 5px 5px #ebebeb;
+          box-shadow: 0px 0px 5px 5px #ebebeb;
+  border-radius: 20px;
+  margin-top: 2vh;
+  -webkit-transition: -webkit-box-shadow 0.8s linear;
+  transition: -webkit-box-shadow 0.8s linear;
+  transition: box-shadow 0.8s linear;
+  transition: box-shadow 0.8s linear, -webkit-box-shadow 0.8s linear;
+}
+
+.mainContentArea .contentHolder {
+  width: 90%;
+  margin: auto;
+  padding-top: 20px;
+}
+
+.mainContentArea .contentHolder h1 {
+  color: #7c795d;
+  font-family: "Trocchi", serif;
+  font-size: 45px;
+  font-weight: normal;
+  line-height: 48px;
+  margin: 0;
+}
+
+.mainContentArea .contentHolder h2 {
+  color: #7c795d;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 32px;
+  margin: 0 0 24px;
+}
+
+.mainContentArea .contentHolder p {
+  color: #4c4a37;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 18px;
+  line-height: 32px;
+  margin: 0 0 24px;
+}
+
+.mainContentArea .contentHolder a {
+  color: #ff9900;
+  background: #fff4a3;
+  text-decoration: none;
+}
+
+.mainContentArea .contentHolder a:hover {
+  background-color: #ff9900;
+  color: white;
+}
+
+.mainContentArea .contentHolder img {
+  max-width: 100%;
+}
+
+.mainContentArea .contentHolder code {
+  background-color: #dddddd;
+  border-radius: 5%;
+  min-width: 100%;
 }
 /*# sourceMappingURL=index.css.map */
