--- a/public/assets/css/index.scss
+++ b/public/assets/css/index.scss
@@ -19,10 +19,10 @@
     height: 10vh;
     margin-left: 50%;
     transform: translateX(-50%);
-    box-shadow: 0px 0px 10px 10px rgb(235, 235, 235);
     border-radius: 20px;
     margin-top: 2vh;
     transition: box-shadow 0.2s linear;
+    box-shadow: 0px 0px 10px 10px rgb(235, 235, 235);
 }
 
 .title {
@@ -34,7 +34,7 @@
         text-transform: uppercase;
         font-weight: 700;
         font-family: "Josefin Sans", sans-serif;
-        background: linear-gradient(to right, #ffa3ab 10%, rgb(123, 255, 233) 50%, #ffa3ab 60%);
+        background: linear-gradient( to right, #ffa3ab 10%, rgb(123, 255, 233) 50%, #ffa3ab 60%);
         background-size: auto auto;
         background-clip: border-box;
         background-size: 200% auto;
@@ -51,5 +51,61 @@
 @keyframes textclip {
     to {
         background-position: 200% center;
+    }
+}
+
+.mainContentArea {
+    width: 80vw;
+    height: auto;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    box-shadow: 0px 0px 5px 5px rgb(235, 235, 235);
+    border-radius: 20px;
+    margin-top: 2vh;
+    transition: box-shadow 0.8s linear;
+    .contentHolder {
+        width: 90%;
+        margin: auto;
+        padding-top: 20px;
+        h1 {
+            color: #7c795d;
+            font-family: "Trocchi", serif;
+            font-size: 45px;
+            font-weight: normal;
+            line-height: 48px;
+            margin: 0;
+        }
+        h2 {
+            color: #7c795d;
+            font-family: "Source Sans Pro", sans-serif;
+            font-size: 28px;
+            font-weight: 400;
+            line-height: 32px;
+            margin: 0 0 24px;
+        }
+        p {
+            color: #4c4a37;
+            font-family: "Source Sans Pro", sans-serif;
+            font-size: 18px;
+            line-height: 32px;
+            margin: 0 0 24px;
+        }
+        a {
+            color: #ff9900;
+            background: #fff4a3;
+            text-decoration: none;
+        }
+        a:hover {
+            background-color: #ff9900;
+            color: white;
+        }
+        img {
+            max-width: 100%;
+        }
+        code {
+            background-color: #dddddd;
+            border-radius: 5%;
+            min-width: 100%;
+        }
     }
 }
