--- a/public/assets/css/create.scss
+++ b/public/assets/css/create.scss
@@ -64,9 +64,11 @@
     margin-top: 2vh;
     transition: box-shadow 0.8s linear;
     .contentHolder {
-        width: 90%;
+        max-width: 90%;
         margin: auto;
-        padding-top: 20px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        height: 50vh;
         h1 {
             color: #7c795d;
             font-family: "Trocchi", serif;
@@ -107,28 +109,85 @@
             border-radius: 5%;
             min-width: 100%;
         }
-        #TeaxtArea {
-            height: 50vh;
-            max-width: 600px;
-            color: #999;
-            font-weight: 400;
-            font-size: 30px;
-            font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
-            width: 100%;
-            background: #fff;
-            border-radius: 3px;
-            line-height: 2em;
-            border: none;
-            box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-            -webkit-transition: height 2s ease;
-            -moz-transition: height 2s ease;
-            -ms-transition: height 2s ease;
-            -o-transition: height 2s ease;
-            transition: height 2s ease;
-        }
-        * {
-            -webkit-font-smoothing: antialiased !important;
-        }
     }
+}
+
+#TextArea {
+    padding: 8px;
+    height: 50vh;
+    color: #999;
+    font-weight: 400;
+    font-size: 30px;
+    font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+    width: 100%;
+    background: #fff;
+    border-radius: 3px;
+    line-height: 2em;
+    border: none;
+    padding: 30px;
+    -webkit-transition: height 2s ease;
+    -moz-transition: height 2s ease;
+    -ms-transition: height 2s ease;
+    -o-transition: height 2s ease;
+    transition: height 2s ease;
+    border: none;
+    background-color: transparent;
+    resize: none;
+    outline: none;
+}
+
+* {
+    -webkit-font-smoothing: antialiased !important;
+}
+
+#btn {
+    background: rgb(44, 189, 214);
+    height: 50px;
+    min-width: 150px;
+    border: none;
+    color: #eee;
+    font-size: 40px;
+    font-family: 'Cookie', cursive;
+    position: relative;
+    transition: 1s;
+    -webkit-tap-highlight-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    padding-top: 5px;
+    margin-top: 1vh;
+}
+
+#btn #circle {
+    width: 5px;
+    height: 5px;
+    background: rgb(44, 214, 87);
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    overflow: hidden;
+    transition: 500ms;
+}
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+#btn:hover {
+    background: rgb(44, 214, 87);
+}
+
+#btn:hover #circle {
+    height: 50px;
+    width: 150px;
+    left: 0;
+    border-radius: 0;
+    border-bottom: 2px solid #eee;
 }
